; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lock.c_LockShmemSize.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lock.c_LockShmemSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LockShmemSize() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  store i32 0, i32* %1, align 4
  %3 = call i64 (...) @NLOCKENTS()
  store i64 %3, i64* %2, align 8
  %4 = load i32, i32* %1, align 4
  %5 = load i64, i64* %2, align 8
  %6 = call i32 @hash_estimate_size(i64 %5, i32 4)
  %7 = call i32 @add_size(i32 %4, i32 %6)
  store i32 %7, i32* %1, align 4
  %8 = load i64, i64* %2, align 8
  %9 = mul nsw i64 %8, 2
  store i64 %9, i64* %2, align 8
  %10 = load i32, i32* %1, align 4
  %11 = load i64, i64* %2, align 8
  %12 = call i32 @hash_estimate_size(i64 %11, i32 4)
  %13 = call i32 @add_size(i32 %10, i32 %12)
  store i32 %13, i32* %1, align 4
  %14 = load i32, i32* %1, align 4
  %15 = load i32, i32* %1, align 4
  %16 = sdiv i32 %15, 10
  %17 = call i32 @add_size(i32 %14, i32 %16)
  store i32 %17, i32* %1, align 4
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i64 @NLOCKENTS(...) #1

declare dso_local i32 @add_size(i32, i32) #1

declare dso_local i32 @hash_estimate_size(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
